# aoc-2023

day-01-1/: Cargo.toml  test.txt
day-01-1/src/: main.rs
day-01-2/: Cargo.toml  test.txt
day-01-2/src/: main.rs
day-02/: Cargo.toml  test.txt
day-02/src/: main.rs
day-03/: Cargo.toml
day-03/src/: main.rs
day-04/: Cargo.toml  test.txt
day-04/src/: main.rs
day-05/: Cargo.toml  README.md
day-05-01/: Cargo.toml
day-05-01/src/: main.rs
day-05/src/: main.rs
day-06/: Cargo.toml
day-06/src/: main.rs
day-07/: Cargo.toml
day-07/src/: main.rs
day-08/: Cargo.toml  README.md
day-08/src/: main.rs
day-09/: Cargo.toml
day-09/src/: main.rs
day-10/: Cargo.toml  test4.txt
day-10/src/: main.rs
day-11/: Cargo.toml
day-11/src/: main.rs
day-12/: Cargo.toml
day-12/src/: main.rs
day-13/: Cargo.toml
day-13/src/: main.rs
day-14/: Cargo.toml
day-14/src/: main.rs
day-15/: Cargo.toml
day-15/src/: main.rs
day-16/: Cargo.toml
day-16/src/: main.rs
day-17/: Cargo.toml
day-17/src/: main.rs
day-18-1/: Cargo.toml
day-18-1/src/: main.rs
day-18-2/: Cargo.toml
day-18-2/src/: main.rs
day-19/: Cargo.toml
day-19/src/: main.rs
day-20/: Cargo.toml  README.md
day-20/src/: main.rs
day-21/: Cargo.toml
day-21/src/: main.rs
