[package]
name = "aoc-2023-day-18-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
itertools = "0.12.0"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
